# mcp-proxmox

./: .env.example  .env.example.multi  .env_2025-09-19_20-15-03.bkp  .env_2025-10-16_16-39-24.bkp  .gitignore  CLEANUP_SUMMARY.md  COMPLETE_SOLUTION_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  EXECUTION_SUMMARY.txt  FINAL_FIX_SUMMARY.md  FINAL_REPORT.md  HOW_TO_RESTART_MCP_SERVER.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_ANALYSIS.md  INDEX.md  MCP_RESOURCE_LISTING_SUMMARY.md  MULTI_CLUSTER_FIXED.md  Makefile  PROJECT_COMPLETION_REPORT.md  PROJECT_STATUS.md  PROXMOX_RESOURCES_REPORT.md  README.md  RESOURCES_SUMMARY.md  SECURITY.md  SETUP_GUIDE.md  add_cluster_param.py  fix_multiline_functions.py  list_proxmox_resources.py  proxmox_resources_output.json  pyproject.toml  test_multi_cluster_server.py  test_new_multi_cluster_tools.py  test_resources.py  verify_mcp_tools.py
docs/: N8N_INTEGRATION.md
src/proxmox_mcp/: __init__.py  client.py  cluster_manager.py  container_ops.py  deployment_tools.py  multi_cluster_client.py  notes_manager.py  server.py  server_multi_cluster.py  utils.py
tests/: test_sse_mode.py
